--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td> <img src="images/twarit.jpg" alt="Twarit Profile photo"></td>
+        <td> <img src="twarit.jpg" alt="Twarit Profile photo"></td>
         <td> <h1>TWARIT SONI</h1>
           <p><em>A Student and a <strong><a href="https://jamesclear.com/self-improvement">Self Improver</a></strong></em></p>
           <p>Hi, I am Twarit Soni, currently pursuing my Electronics and Telecomm. degree from JEC. I work as a part time tutor
