text update index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td> <h1>TWARIT SONI</h1>
           <p><em>A Student and a <strong><a href="https://jamesclear.com/self-improvement">Self Improver</a></strong></em></p>
           <p>Hi, I am Twarit Soni, currently pursuing my Electronics and Telecomm. degree from JEC. I work as a part time tutor
-              and I love reading books. I can speak English and hindi and knows Japanese. I workout and I am always in a journey of 
+              and I love reading books. I can speak English and hindi and know little Japanese. I workout and I am always in a journey of 
               Self Improvement. PS: I also like to watch sitcoms!</p></td>
       </tr>
       <!--Tables in HTML-->
